--- a/Angel/fish.html
+++ b/Angel/fish.html
@@ -1,6 +1,6 @@
 <html>
 <link rel="stylesheet" href="fish.css">
-
+<link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet">
 
 <script id="vertex-shader" type="x-shader/x-vertex">
 
@@ -44,7 +44,7 @@ main()
         <div class="slidecontainer">
         <div class="slider">
             <div class="sliderTitle">
-                <p>Separation distance</p>
+                <p>Separation Distance</p>
                 <p id='sepDist'>50</p>
             </div>
             <input type="range" min="0" max="200" step="1" value="50" class="slidebar"
@@ -52,7 +52,7 @@ main()
         </div>
         <div class="slider">
             <div class="sliderTitle">
-                <p>Seperation force</p>
+                <p>Separation Force</p>
                 <p id='sepForce'>0.2</p>
             </div>
             <input type="range" min="0.0" max="1.0" step="0.01" value="0.2" class="slidebar"
@@ -60,7 +60,7 @@ main()
         </div>
         <div class="slider">
             <div class="sliderTitle">
-                <p>Alignment distance</p>
+                <p>Alignment Distance</p>
                 <p id='alignDist'>100</p>
             </div>
             <input type="range" min="0" max="200" step="1" value="100" class="slidebar"
@@ -68,7 +68,7 @@ main()
         </div>
         <div class="slider">
             <div class="sliderTitle">
-                <p>Alignment force</p>
+                <p>Alignment Force</p>
                 <p id='alignForce'>0.1</p>
             </div>
             <input type="range" min="0.0" max="1.0" step="0.01" value="0.1" class="slidebar"
@@ -76,7 +76,7 @@ main()
         </div>
         <div class="slider">
             <div class="sliderTitle">
-                <p>Cohesion distance</p>
+                <p>Cohesion Distance</p>
                 <p id='cohDist'>100</p>
             </div>
             <input type="range" min="0" max="200" step="1" value="100" class="slidebar"
@@ -84,7 +84,7 @@ main()
         </div>
         <div class="slider">
             <div class="sliderTitle">
-                <p>Cohesion force</p>
+                <p>Cohesion Force</p>
                 <p id='cohForce'>0.1</p>
             </div>
             <input type="range" min="0.0" max="1.0" step="0.01" value="0.1" class="slidebar"
@@ -92,11 +92,19 @@ main()
         </div>
         <div class="slider">
             <div class="sliderTitle">
-                <p>Swim speed</p>
+                <p>Swim Speed</p>
                 <p id='speed'>0.5</p>
             </div>
             <input type="range" min="0.0" max="1.0" step="0.1" value="0.5" class="slidebar"
             oninput="updateSliders(this.value, 'speed')" onchange="updateSliders(this.value,'speed')">
+        </div>
+        <div class="slider">
+            <div class="sliderTitle">
+                <p>Fish Count</p>
+                <p id='fishCount'>50</p>
+            </div>
+            <input type="range" min="1" max="100" step="1" value="50" class="slidebar"
+            oninput="updateSliders(this.value, 'fishCount')" onchange="updateSliders(this.value,'fishCount')">
         </div>
         <div class="togglecontainer">
             <div class="sliderTitle">
