--- a/Angel/fish.html
+++ b/Angel/fish.html
@@ -1,6 +1,7 @@
 <html>
 <link rel="stylesheet" href="fish.css">
 <link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 
 <script id="vertex-shader" type="x-shader/x-vertex">
 
@@ -47,7 +48,7 @@ main()
                 <p>Separation Distance</p>
                 <p id='sepDist'>50</p>
             </div>
-            <input type="range" min="0" max="200" step="1" value="50" class="slidebar"
+            <input type="range" min="0" max="200" step="1" value="50" class="slidebar"  id="sepDistSlider"
             oninput="updateSliders(this.value, 'sepDist')" onchange="updateSliders(this.value,'sepDist')">
         </div>
         <div class="slider">
@@ -55,7 +56,7 @@ main()
                 <p>Separation Force</p>
                 <p id='sepForce'>0.2</p>
             </div>
-            <input type="range" min="0.0" max="1.0" step="0.01" value="0.2" class="slidebar"
+            <input type="range" min="0.0" max="1.0" step="0.01" value="0.2" class="slidebar"    id="sepForceSlider"
             oninput="updateSliders(this.value, 'sepForce')" onchange="updateSliders(this.value,'sepForce')">
         </div>
         <div class="slider">
@@ -63,7 +64,7 @@ main()
                 <p>Alignment Distance</p>
                 <p id='alignDist'>100</p>
             </div>
-            <input type="range" min="0" max="200" step="1" value="100" class="slidebar"
+            <input type="range" min="0" max="200" step="1" value="100" class="slidebar" id="alignDistSlider"
             oninput="updateSliders(this.value, 'alignDist')" onchange="updateSliders(this.value,'alignDist')">
         </div>
         <div class="slider">
@@ -71,7 +72,7 @@ main()
                 <p>Alignment Force</p>
                 <p id='alignForce'>0.1</p>
             </div>
-            <input type="range" min="0.0" max="1.0" step="0.01" value="0.1" class="slidebar"
+            <input type="range" min="0.0" max="1.0" step="0.01" value="0.1" class="slidebar"  id="alignForceSlider"
             oninput="updateSliders(this.value, 'alignForce')" onchange="updateSliders(this.value,'alignForce')">
         </div>
         <div class="slider">
@@ -79,7 +80,7 @@ main()
                 <p>Cohesion Distance</p>
                 <p id='cohDist'>100</p>
             </div>
-            <input type="range" min="0" max="200" step="1" value="100" class="slidebar"
+            <input type="range" min="0" max="200" step="1" value="100" class="slidebar" id="cohDistSlider"
             oninput="updateSliders(this.value, 'cohDist')" onchange="updateSliders(this.value,'cohDist')">
         </div>
         <div class="slider">
@@ -87,7 +88,7 @@ main()
                 <p>Cohesion Force</p>
                 <p id='cohForce'>0.1</p>
             </div>
-            <input type="range" min="0.0" max="1.0" step="0.01" value="0.1" class="slidebar"
+            <input type="range" min="0.0" max="1.0" step="0.01" value="0.1" class="slidebar" id="cohForceSlider"
             oninput="updateSliders(this.value, 'cohForce')" onchange="updateSliders(this.value,'cohForce')">
         </div>
         <div class="slider">
@@ -95,7 +96,7 @@ main()
                 <p>Swim Speed</p>
                 <p id='speed'>0.5</p>
             </div>
-            <input type="range" min="0.0" max="1.0" step="0.1" value="0.5" class="slidebar"
+            <input type="range" min="0.0" max="1.0" step="0.1" value="0.5" class="slidebar" id="speedSider"
             oninput="updateSliders(this.value, 'speed')" onchange="updateSliders(this.value,'speed')">
         </div>
         <div class="slider">
@@ -103,18 +104,32 @@ main()
                 <p>Fish Count</p>
                 <p id='fishCount'>50</p>
             </div>
-            <input type="range" min="1" max="100" step="1" value="50" class="slidebar"
+            <input type="range" min="1" max="100" step="1" value="50" class="slidebar" id="fishCountSlider"
             oninput="updateSliders(this.value, 'fishCount')" onchange="updateSliders(this.value,'fishCount')">
         </div>
-        <div class="togglecontainer">
-            <div class="sliderTitle">
-                    <p id='bounce'>Bounce</p>
+        <div class="buttons">
+            <div class="buttoncontainer">
+                <div class="sliderTitle">
+                        <p id='bounce'>Bounce</p>
+                </div>
+                <label class="switch">  
+                        <input type="checkbox" onchange="updateSliders( this.value, 'bounce')" value="Bounce"  id="bounceSlider">
+                        <span class="toggle"></span>
+                </label>
             </div>
-            <label class="switch">  
-                    <input type="checkbox" onchange="updateSliders( this.value, 'bounce')" value="Bounce" >
-                    <span class="toggle"></span>
-            </label>
+            <div class="buttoncontainer">
+                <div class="sliderTitle">
+                        <p id='reset'>Reset</p>
+                </div>
+                <label class="switch">
+                        <input type="button" onclick="updateSliders( this.value, 'reset')" value="Reset" >
+                        <span class="toggle reset"><i class="fas fa-sync-alt"></i></span>
+                </label>
+            </div>
+    
+
         </div>
+        
 
         </div>
 
