--- a/Angel/fish.html
+++ b/Angel/fish.html
@@ -1,6 +1,7 @@
 <html>
 <link rel="stylesheet" href="fish.css">
 <link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 
 <script id="vertex-shader" type="x-shader/x-vertex">
